--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap" rel="stylesheet">    <!-- <link rel="stylesheet" href="reset.css" type="text/css"> -->
+    <title>VinAmi</title>
+</head>
 <body>
-  <h1>Mattia</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <img class="logo" src="./images/wine-glass.png" alt="">
+        <h1 class="pagename"><a href="./index.html">VinAmi</a></h1>
+        <nav>
+            <ul>
+                <li><a>Il Territorio</a></li>
+                <li><a href="./region.html">Le Regioni</a></li>
+                <li><a>Dicono di Noi</a></li>
+            </ul>
+        </nav>
+    </header>    
+    <main class="home">
+        <h2 class="banner">Guida al corso ONAV di Secondo Livello</h2>
+    </main>
+    <footer>
+        <h3>Powered by quello sbevazzone di Manfro</h3>
+    </footer>
+    
 </body>
- 
 </html>
